--- a/Advanced Calculator/Caclulator2.html
+++ b/Advanced Calculator/Caclulator2.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Advanced Calculator</title>
+    <link rel="stylesheet" href="Calculator2.css">
 </head>
 <body>
-    <script src="index.js"></script>
+    
+    <script src="Calculator2.js"></script>
 </body>
 </html>
