--- a/Card Shuffler/cardshuffle.html
+++ b/Card Shuffler/cardshuffle.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stlyesheet", href="index.css">
+    <link rel="stylesheet" href="cardshuffle.css">
 </head>
 <body>
     
-    <script src="index.js"></script>
+    <h1 id="myH1"></h1>
+
+    <script src="cardshuffle.js"></script>
 </body>
 </html>
