--- a/Portfolio/resume.html
+++ b/Portfolio/resume.html
@@ -7,13 +7,18 @@
     <link rel="stylesheet" href="resume.css">
 </head>
 <body>
-    <h1 id="heading">Portfolio</h1>
+    <h1 id="heading">Welcome to my Portfolio</h1>
 
-    <div class="buttons">
+    
+
+    <nav id="navBar" class="buttons">
         <button id="myAbout">About Me</button>
         <button id="myProjects" onclick="">Projects</button>
+    </nav>
+    
+    <div id="description">
+        <p>My name Maxwell. I am currently a Computer Science student studying at the University of Technology Sydney!</p>
     </div>
-
     <script src="resume.js"></script>
 </body>
 </html>
