--- a/To Do List/todo.html
+++ b/To Do List/todo.html
@@ -16,8 +16,8 @@
 
     <form>
         <input type="text" id="inputTask"><br>
-        <button id="addTask" onclick="addTask()">Add Task</button>
-        <button id="removeTask" onclick="removeTask()">Remove Task</button>
+        <button id="addTask" onclick="addTask()">Add</button>
+        <button id="removeTask" onclick="removeTask()">Remove</button>
     </form>
 
     <p id="resultText">Task Added</p>
