--- a/Temperature Conversion Program/TempConvert.html
+++ b/Temperature Conversion Program/TempConvert.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="TempConvert.css">
 </head>
 <body>
 
@@ -22,6 +22,6 @@
         <p id="result"></p>
     </form>
 
-    <script src="index.js"></script>
+    <script src="TempConvert.js"></script>
 </body>
 </html>
