--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     
+    <ol id="fruits">
+        <li id="apple">Apple</li>
+        <li id="orange">Orange</li>
+        <li id="Banana">Banana</li>
+    </ol>
+
     <script src="index.js"></script>
 </body>
 </html>
